<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_continue">Log in to continue!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_new_account1">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="default_user">Default User</string>
    <string name="chat">Chat</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>